--- a/index.html
+++ b/index.html
@@ -165,9 +165,9 @@
 				
 				<p style="font-family: 'Playfair Display', serif;" >Síguenos en nuestras redes sociales:</p>
 				
-				<a class="ico" href="https://www.facebook.com/profile.php?id=100066626200264"><img class="img_ico" src="    " alt="Facebook" /></a>
-				<a class="ico" href="https://api.whatsapp.com/send?phone=2994516303&text="><img class="img_ico" src="     " alt="logo whatsapp" /></a>
-				<a class="ico" href="https://www.instagram.com/FMActiva983Mhz"><img class="img_ico" src="         " alt="Instagram" /></a>
+				<a class="ico" href="https://www.facebook.com/profile.php?id=100066626200264"><img class="img_ico" src="https://activafm983.argentinastream.com/images/facebook.png" alt="Facebook" /></a>
+				<a class="ico" href="https://api.whatsapp.com/send?phone=2994516303&text="><img class="img_ico" src="https://activafm983.argentinastream.com/images/whatsapp.png" alt="logo whatsapp" /></a>
+				<a class="ico" href="https://www.instagram.com/FMActiva983Mhz"><img class="img_ico" src="https://activafm983.argentinastream.com/images/instagram.png" alt="Instagram" /></a>
 				<br>
 				<div style="text-align: right;margin-right: 1cm;">
 				<span style="font-weight: bold;font-style: italic;"> Diseño:</span>
