--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 				<p style="font-family: 'Playfair Display', serif;color: white; font-size: 30px;">Aquí podrás escuchar nuestra radio en vivo, sin importar donde estés.</p>
                 
                 <div class="pie">
-                    <img style="height: 400px;width: 400px; border-radius: 50px;box-shadow: 5px 5px 100px rgba(255, 0, 0, 0.3),-5px 5px 100px rgba(255, 0, 0, 0.3),5px -5px 100px rgba(255, 0, 0, 0.3), -5px -5px 100px rgba(255, 0, 0, 0.3) " src="https://activafm983.argentinastream.com/logos/logo.png" alt="Radio" />
+                    <img style="height: 400px;width: 400px; border-radius: 50px;box-shadow: 5px 5px 100px rgba(255, 0, 0, 0.3),-5px 5px 100px rgba(255, 0, 0, 0.3),5px -5px 100px rgba(255, 0, 0, 0.3), -5px -5px 100px rgba(255, 0, 0, 0.3) " src="https://i.postimg.cc/2yfMRrfR/RadioLUZ.jpg" alt="Radio" />
                 </div>
 
 				
